# fish-reports

./: .gitignore  EXCEL_COMPATIBILITY_FIX.md  FINAL_STATUS.md  FINAL_SUMMARY.md  GITHUB_SETUP.md  INSTALL.md  NEXT_ITERATION_PLAN.md  NEXT_STEPS.md  PROJECT_STATUS.md  QUICK_START.md  README.md  RUNNING_GUIDE.md  USER_GUIDE.md  analyze_excel_structure.py  analyze_test_files.py  app.py  check_license.py  check_output_file.py  compare_files.py  create_excel_reports.py  create_sample_data.py  gui.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_excel.py  test_field_replacement.py  test_full_workflow.py  test_grouping.py  test_sample.py  test_updated_replacement.py  test_weight_conversion.py  verify_replacement.py
src/fish_reports/: __init__.py  __main__.py  filtered_data.xlsx.backup
src/fish_reports/core/: __init__.py  workflow.py
src/fish_reports/data/: __init__.py  file_processor.py  report_manager.py
src/fish_reports/gui/: __init__.py  main_window.py
src/fish_reports/utils/: __init__.py  city_manager.py  file_utils.py
tests/: conftest.py  test_file_processor.py
